--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -69,7 +69,7 @@
 
 .main:after {
   content: "";
-  background-image: url("/assets/images/grid.svg");
+  background-image: url("/grid.svg");
   z-index: 1;
   position: absolute;
   width: 100%;
@@ -114,6 +114,7 @@
 
 .app{
   @apply flex flex-col w-full justify-center;
+  z-index: 4;
 }
 
 .black_btn {
